# ETS-pythonSLOWDAQ

./: .gitignore  README.md  config.yaml  environment.yml  pyproject.toml  state.yaml
deploy/: docker-compose.override.yml  ets-slowcontrol.service  telegraf.conf
deploy/grafana/: ets-dashboard.json
docs/: setup-testing-verification.md
nodered/: flows.json
slowcontrol/: __init__.py  app.py
slowcontrol/controllers/: autovalve.py  base.py  humidity.py  interlocks.py  pid.py
slowcontrol/core/: config.py  mqtt.py  registry.py  service.py
slowcontrol/drivers/: base.py  dht_serial.py  esp32_serial.py  gpio_relay.py  labjack_t7.py  lakeshore350.py
slowcontrol/gui/: control_panel.py  main_window.py  sensor_panel.py
slowcontrol/state/: __init__.py  schema.py  store.py
tests/: conftest.py  test_controllers.py  test_drivers.py
webcontrol/: app.py  ets-webcontrol.service  requirements.txt
webcontrol/templates/: control.html  index.html  readme.html
